--- a/style.css
+++ b/style.css
@@ -55,3 +55,12 @@ li a {
 	font-size: 16px;
 	line-height: 18px;
 }
+
+@media only screen and (max-device-width: 768px) {
+
+	body {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+
+}
